cmake_minimum_required(VERSION 2.8)

project(collada_dom)

ADD_DEFINITIONS(-DPCRE_STATIC=1)
ADD_DEFINITIONS(-DHAVE_CONFIG_H=1)
ADD_DEFINITIONS(-DDOM_INCLUDE_TINYXML=1)

include_directories(../../libdts)
include_directories(../../libdts/src)
include_directories(../../libdts/collada/include)
include_directories(../../libdts/tinyxml)
include_directories(../../libdts/pcre)
include_directories(../../libdts/collada/include/1.4)

set(COLLADADOM_SOURCES
	../../libdts/collada/src/1.4/dom/domLibrary_effects.cpp
	../../libdts/collada/src/1.4/dom/domFx_code_profile.cpp
	../../libdts/collada/src/1.4/dom/domRigid_body.cpp
	../../libdts/collada/src/1.4/dom/domInstance_node.cpp
	../../libdts/collada/src/1.4/dom/domMaterial.cpp
	../../libdts/collada/src/1.4/dom/domGles_newparam.cpp
	../../libdts/collada/src/1.4/dom/domFx_clearcolor_common.cpp
	../../libdts/collada/src/1.4/dom/domFx_cleardepth_common.cpp
	../../libdts/collada/src/1.4/dom/domAnimation.cpp
	../../libdts/collada/src/1.4/dom/domCg_sampler3D.cpp
	../../libdts/collada/src/1.4/dom/domSource.cpp
	../../libdts/collada/src/1.4/dom/domInputLocalOffset.cpp
	../../libdts/collada/src/1.4/dom/domInstance_rigid_body.cpp
	../../libdts/collada/src/1.4/dom/domGeometry.cpp
	../../libdts/collada/src/1.4/dom/domCg_surface_type.cpp
	../../libdts/collada/src/1.4/dom/domProfile_COMMON.cpp
	../../libdts/collada/src/1.4/dom/domInstance_force_field.cpp
	../../libdts/collada/src/1.4/dom/domGlsl_setparam_simple.cpp
	../../libdts/collada/src/1.4/dom/domCamera.cpp
	../../libdts/collada/src/1.4/dom/domFx_surface_format_hint_common.cpp
	../../libdts/collada/src/1.4/dom/domTargetableFloat3.cpp
	../../libdts/collada/src/1.4/dom/domInt_array.cpp
	../../libdts/collada/src/1.4/dom/domGles_texture_unit.cpp
	../../libdts/collada/src/1.4/dom/domProfile_GLSL.cpp
	../../libdts/collada/src/1.4/dom/domPhysics_scene.cpp
	../../libdts/collada/src/1.4/dom/domFx_basic_type_common.cpp
	../../libdts/collada/src/1.4/dom/domLibrary_nodes.cpp
	../../libdts/collada/src/1.4/dom/domGl_sampler1D.cpp
	../../libdts/collada/src/1.4/dom/domPhysics_material.cpp
	../../libdts/collada/src/1.4/dom/domFx_surface_init_cube_common.cpp
	../../libdts/collada/src/1.4/dom/domInstance_rigid_constraint.cpp
	../../libdts/collada/src/1.4/dom/domFx_depthtarget_common.cpp
	../../libdts/collada/src/1.4/dom/domFx_annotate_type_common.cpp
	../../libdts/collada/src/1.4/dom/domVisual_scene.cpp
	../../libdts/collada/src/1.4/dom/domCg_samplerRECT.cpp
	../../libdts/collada/src/1.4/dom/domGl_sampler3D.cpp
	../../libdts/collada/src/1.4/dom/domGles_basic_type_common.cpp
	../../libdts/collada/src/1.4/dom/domGles_texcombiner_argumentRGB_type.cpp
	../../libdts/collada/src/1.4/dom/domInstance_controller.cpp
	../../libdts/collada/src/1.4/dom/domAsset.cpp
	../../libdts/collada/src/1.4/dom/domRotate.cpp
	../../libdts/collada/src/1.4/dom/domCg_setuser_type.cpp
	../../libdts/collada/src/1.4/dom/domFx_stenciltarget_common.cpp
	../../libdts/collada/src/1.4/dom/domCapsule.cpp
	../../libdts/collada/src/1.4/dom/domSkew.cpp
	../../libdts/collada/src/1.4/dom/domGl_pipeline_settings.cpp
	../../libdts/collada/src/1.4/dom/domMatrix.cpp
	../../libdts/collada/src/1.4/dom/domLibrary_physics_scenes.cpp
	../../libdts/collada/src/1.4/dom/domInstance_light.cpp
	../../libdts/collada/src/1.4/dom/domGles_texture_pipeline.cpp
	../../libdts/collada/src/1.4/dom/domNode.cpp
	../../libdts/collada/src/1.4/dom/domGlsl_setarray_type.cpp
	../../libdts/collada/src/1.4/dom/domFx_colortarget_common.cpp
	../../libdts/collada/src/1.4/dom/domCylinder.cpp
	../../libdts/collada/src/1.4/dom/domEllipsoid.cpp
	../../libdts/collada/src/1.4/dom/domLibrary_materials.cpp
	../../libdts/collada/src/1.4/dom/domGles_texenv_command_type.cpp
	../../libdts/collada/src/1.4/dom/domLibrary_controllers.cpp
	../../libdts/collada/src/1.4/dom/domGles_texcombiner_commandAlpha_type.cpp
	../../libdts/collada/src/1.4/dom/domLibrary_force_fields.cpp
	../../libdts/collada/src/1.4/dom/domLibrary_visual_scenes.cpp
	../../libdts/collada/src/1.4/dom/domFx_surface_init_from_common.cpp
	../../libdts/collada/src/1.4/dom/domLibrary_physics_models.cpp
	../../libdts/collada/src/1.4/dom/domExtra.cpp
	../../libdts/collada/src/1.4/dom/domScale.cpp
	../../libdts/collada/src/1.4/dom/domFx_sampler2D_common.cpp
	../../libdts/collada/src/1.4/dom/domCg_newparam.cpp
	../../libdts/collada/src/1.4/dom/domInputGlobal.cpp
	../../libdts/collada/src/1.4/dom/domBool_array.cpp
	../../libdts/collada/src/1.4/dom/domMorph.cpp
	../../libdts/collada/src/1.4/dom/domLines.cpp
	../../libdts/collada/src/1.4/dom/domCg_newarray_type.cpp
	../../libdts/collada/src/1.4/dom/domTapered_cylinder.cpp
	../../libdts/collada/src/1.4/dom/domCg_sampler2D.cpp
	../../libdts/collada/src/1.4/dom/domInputLocal.cpp
	../../libdts/collada/src/1.4/dom/domGlsl_newparam.cpp
	../../libdts/collada/src/1.4/dom/domGles_texcombiner_commandRGB_type.cpp
	../../libdts/collada/src/1.4/dom/domConvex_mesh.cpp
	../../libdts/collada/src/1.4/dom/domRigid_constraint.cpp
	../../libdts/collada/src/1.4/dom/domGlsl_param_type.cpp
	../../libdts/collada/src/1.4/dom/domEffect.cpp
	../../libdts/collada/src/1.4/dom/domCommon_float_or_param_type.cpp
	../../libdts/collada/src/1.4/dom/domLibrary_animations.cpp
	../../libdts/collada/src/1.4/dom/domGl_hook_abstract.cpp
	../../libdts/collada/src/1.4/dom/domTapered_capsule.cpp
	../../libdts/collada/src/1.4/dom/domFx_profile_abstract.cpp
	../../libdts/collada/src/1.4/dom/domTrifans.cpp
	../../libdts/collada/src/1.4/dom/domInstance_camera.cpp
	../../libdts/collada/src/1.4/dom/domGles_texture_constant_type.cpp
	../../libdts/collada/src/1.4/dom/domSkin.cpp
	../../libdts/collada/src/1.4/dom/domFx_surface_common.cpp
	../../libdts/collada/src/1.4/dom/domIDREF_array.cpp
	../../libdts/collada/src/1.4/dom/domParam.cpp
	../../libdts/collada/src/1.4/dom/domInstance_material.cpp
	../../libdts/collada/src/1.4/dom/domFx_surface_init_common.cpp
	../../libdts/collada/src/1.4/dom/domP.cpp
	../../libdts/collada/src/1.4/dom/domCg_setparam_simple.cpp
	../../libdts/collada/src/1.4/dom/domGlsl_newarray_type.cpp
	../../libdts/collada/src/1.4/dom/domTranslate.cpp
	../../libdts/collada/src/1.4/dom/domLibrary_animation_clips.cpp
	../../libdts/collada/src/1.4/dom/domChannel.cpp
	../../libdts/collada/src/1.4/dom/domBind_material.cpp
	../../libdts/collada/src/1.4/dom/domForce_field.cpp
	../../libdts/collada/src/1.4/dom/domTriangles.cpp
	../../libdts/collada/src/1.4/dom/domCg_samplerCUBE.cpp
	../../libdts/collada/src/1.4/dom/domCg_sampler1D.cpp
	../../libdts/collada/src/1.4/dom/domLight.cpp
	../../libdts/collada/src/1.4/dom/domFx_surface_init_volume_common.cpp
	../../libdts/collada/src/1.4/dom/domCommon_newparam_type.cpp
	../../libdts/collada/src/1.4/dom/domFx_sampler1D_common.cpp
	../../libdts/collada/src/1.4/dom/domInstance_geometry.cpp
	../../libdts/collada/src/1.4/dom/domCg_connect_param.cpp
	../../libdts/collada/src/1.4/dom/domMesh.cpp
	../../libdts/collada/src/1.4/dom/domProfile_CG.cpp
	../../libdts/collada/src/1.4/dom/domName_array.cpp
	../../libdts/collada/src/1.4/dom/domSphere.cpp
	../../libdts/collada/src/1.4/dom/domFx_annotate_common.cpp
	../../libdts/collada/src/1.4/dom/domInstance_effect.cpp
	../../libdts/collada/src/1.4/dom/domGl_samplerCUBE.cpp
	../../libdts/collada/src/1.4/dom/domTechnique.cpp
	../../libdts/collada/src/1.4/dom/domController.cpp
	../../libdts/collada/src/1.4/dom/domPolygons.cpp
	../../libdts/collada/src/1.4/dom/domVertices.cpp
	../../libdts/collada/src/1.4/dom/domSampler.cpp
	../../libdts/collada/src/1.4/dom/domCg_setparam.cpp
	../../libdts/collada/src/1.4/dom/domTargetableFloat.cpp
	../../libdts/collada/src/1.4/dom/domFx_samplerCUBE_common.cpp
	../../libdts/collada/src/1.4/dom/domCOLLADA.cpp
	../../libdts/collada/src/1.4/dom/domLibrary_physics_materials.cpp
	../../libdts/collada/src/1.4/dom/domFx_clearstencil_common.cpp
	../../libdts/collada/src/1.4/dom/domLinestrips.cpp
	../../libdts/collada/src/1.4/dom/domPlane.cpp
	../../libdts/collada/src/1.4/dom/domGles_sampler_state.cpp
	../../libdts/collada/src/1.4/dom/domInstance_physics_material.cpp
	../../libdts/collada/src/1.4/dom/domAccessor.cpp
	../../libdts/collada/src/1.4/dom/domInstance_physics_model.cpp
	../../libdts/collada/src/1.4/dom/domCg_samplerDEPTH.cpp
	../../libdts/collada/src/1.4/dom/domLibrary_geometries.cpp
	../../libdts/collada/src/1.4/dom/domTypes.cpp
	../../libdts/collada/src/1.4/dom/domGles_pipeline_settings.cpp
	../../libdts/collada/src/1.4/dom/domFx_surface_init_planar_common.cpp
	../../libdts/collada/src/1.4/dom/domGl_samplerRECT.cpp
	../../libdts/collada/src/1.4/dom/domImage.cpp
	../../libdts/collada/src/1.4/dom/domTristrips.cpp
	../../libdts/collada/src/1.4/dom/domLibrary_lights.cpp
	../../libdts/collada/src/1.4/dom/domCg_param_type.cpp
	../../libdts/collada/src/1.4/dom/domFx_samplerRECT_common.cpp
	../../libdts/collada/src/1.4/dom/domSpline.cpp
	../../libdts/collada/src/1.4/dom/domBox.cpp
	../../libdts/collada/src/1.4/dom/domPolylist.cpp
	../../libdts/collada/src/1.4/dom/domAnimation_clip.cpp
	../../libdts/collada/src/1.4/dom/domLibrary_images.cpp
	../../libdts/collada/src/1.4/dom/domGl_samplerDEPTH.cpp
	../../libdts/collada/src/1.4/dom/domFx_sampler3D_common.cpp
	../../libdts/collada/src/1.4/dom/domFx_samplerDEPTH_common.cpp
	../../libdts/collada/src/1.4/dom/domGlsl_surface_type.cpp
	../../libdts/collada/src/1.4/dom/domCommon_color_or_texture_type.cpp
	../../libdts/collada/src/1.4/dom/domCg_setarray_type.cpp
	../../libdts/collada/src/1.4/dom/domInstanceWithExtra.cpp
	../../libdts/collada/src/1.4/dom/domLookat.cpp
	../../libdts/collada/src/1.4/dom/domPhysics_model.cpp
	../../libdts/collada/src/1.4/dom/domFloat_array.cpp
	../../libdts/collada/src/1.4/dom/domGlsl_setparam.cpp
	../../libdts/collada/src/1.4/dom/domConstants.cpp
	../../libdts/collada/src/1.4/dom/domProfile_GLES.cpp
	../../libdts/collada/src/1.4/dom/domGl_sampler2D.cpp
	../../libdts/collada/src/1.4/dom/domLibrary_cameras.cpp
	../../libdts/collada/src/1.4/dom/domFx_include_common.cpp
	../../libdts/collada/src/1.4/dom/domCommon_transparent_type.cpp
	../../libdts/collada/src/1.4/dom/domGles_texcombiner_command_type.cpp
	../../libdts/collada/src/1.4/dom/domGles_texcombiner_argumentAlpha_type.cpp
	../../libdts/collada/src/1.4/dom/domFx_newparam_common.cpp
	../../libdts/collada/src/modules/stdErrPlugin/stdErrPlugin.cpp
	../../libdts/collada/src/modules/LIBXMLPlugin/daeLIBXMLPlugin.cpp
	../../libdts/collada/src/modules/STLDatabase/daeSTLDatabase.cpp
	../../libdts/collada/src/dae/daeStringTable.cpp
	../../libdts/collada/src/dae/daeErrorHandler.cpp
	../../libdts/collada/src/dae/daeRawResolver.cpp
	../../libdts/collada/src/dae/daeElement.cpp
	../../libdts/collada/src/dae/domAny.cpp
	../../libdts/collada/src/dae/daeArray.cpp
	../../libdts/collada/src/dae/daeUtils.cpp
	../../libdts/collada/src/dae/daeMetaCMPolicy.cpp
	../../libdts/collada/src/dae/daeMetaGroup.cpp
	../../libdts/collada/src/dae/daeDom.cpp
	../../libdts/collada/src/dae/daeStandardURIResolver.cpp
	../../libdts/collada/src/dae/daeDocument.cpp
	../../libdts/collada/src/dae/daeMetaElementAttribute.cpp
	../../libdts/collada/src/dae/daeSIDResolver.cpp
	../../libdts/collada/src/dae/daeMetaChoice.cpp
	../../libdts/collada/src/dae/daeStringRef.cpp
	../../libdts/collada/src/dae/daeIDRef.cpp
	../../libdts/collada/src/dae/daeDatabase.cpp
	../../libdts/collada/src/dae/daeMetaSequence.cpp
	../../libdts/collada/src/dae/dae.cpp
	../../libdts/collada/src/dae/daeMetaAny.cpp
	../../libdts/collada/src/dae/daeTinyXMLPlugin.cpp
	../../libdts/collada/src/dae/daeAtomicType.cpp
	../../libdts/collada/src/dae/daeURI.cpp
	../../libdts/collada/src/dae/daeMetaElement.cpp
	../../libdts/collada/src/dae/daeMemorySystem.cpp
	../../libdts/collada/src/dae/daeError.cpp
	../../libdts/collada/src/dae/daeRefCountedObj.cpp
	../../libdts/collada/src/dae/daeIOPluginCommon.cpp
	../../libdts/collada/src/dae/daeMetaAttribute.cpp
)

add_library(collada_dom STATIC ${COLLADADOM_SOURCES})
